most of skeleonton completed. Need to create/delete lists

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ div.list ul li{
     bottom: 25%;
     background-color: gray;
     padding:1rem;
+    overflow-y: scroll;
 }
 
 div#aside-bttns ul{
