--- a/style.css
+++ b/style.css
@@ -22,11 +22,14 @@ div#user-info{
     
 }
 div#org-info{
+    display:flex;
     border-style: solid;
     border-width:1px;
     border-color: black;
     grid-column-start: 2;
     grid-row-start: 1; 
+    justify-content: space-evenly;
+    align-items: center;
 }
 div#content-container{
     border-style: solid;
